--- a/VISIrisApp/VISIrisApp.vcxproj.filters
+++ b/VISIrisApp/VISIrisApp.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="smartptr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PictureCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VISImpageProc5mpCol.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PictureCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
