get the 8 bit grayscale image, adding the two files for convert raw to bmp ImageConvert.cpp ImageConvert.h implement the 24-bit to 8-bit raw grayscale array is in the file VISIrisApp.cpp the following files are also changed VISIrisApp.vcxproj VISIrisApp.vcxproj.filters

--- a/VISIrisApp/VISIrisApp.vcxproj
+++ b/VISIrisApp/VISIrisApp.vcxproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="dshowutil.h" />
     <ClInclude Include="GetDevice.h" />
+    <ClInclude Include="ImageConvert.h" />
     <ClInclude Include="PictureCtrl.h" />
     <ClInclude Include="qedit.h" />
     <ClInclude Include="Resource.h" />
@@ -107,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GetDevice.cpp" />
+    <ClCompile Include="ImageConvert.cpp" />
     <ClCompile Include="PictureCtrl.cpp" />
     <ClCompile Include="SampleCGB.cpp" />
     <ClCompile Include="stdafx.cpp">
