--- a/VISIrisApp/VISIrisApp.vcxproj.filters
+++ b/VISIrisApp/VISIrisApp.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="PictureCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ImageConvert.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PictureCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageConvert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
