--- a/VISIrisApp/VISIrisApp.vcxproj.filters
+++ b/VISIrisApp/VISIrisApp.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="ImageConvert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IrisProc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ImageConvert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IrisProc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
