--- a/VISIrisApp/VISIrisApp.vcxproj
+++ b/VISIrisApp/VISIrisApp.vcxproj
@@ -63,9 +63,9 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d9.lib;shlwapi.lib;strmiids.lib;iDataIris.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d9.lib;shlwapi.lib;strmiids.lib;iDataIris.lib;opencv_core2413d.lib;opencv_highgui2413d.lib;opencv_imgproc2413d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImageHasSafeExceptionHandlers>true</ImageHasSafeExceptionHandlers>
-      <AdditionalLibraryDirectories>$(IRISID_DIR)\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(IRISID_DIR)\Lib;$(OPENCV_DIR32)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -104,7 +104,6 @@
     <ClInclude Include="GetDevice.h" />
     <ClInclude Include="ImageConvert.h" />
     <ClInclude Include="IrisProc.h" />
-    <ClInclude Include="PictureCtrl.h" />
     <ClInclude Include="qedit.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SampleCGB.h" />
@@ -124,7 +123,6 @@
     <ClCompile Include="GetDevice.cpp" />
     <ClCompile Include="ImageConvert.cpp" />
     <ClCompile Include="IrisProc.cpp" />
-    <ClCompile Include="PictureCtrl.cpp" />
     <ClCompile Include="SampleCGB.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
